--- a/SuperHexagon/SuperHexagon.fsproj
+++ b/SuperHexagon/SuperHexagon.fsproj
@@ -102,5 +102,12 @@
       <IsCxx>False</IsCxx>
       <Kind>Dynamic</Kind>
     </NativeReference>
+    <NativeReference Include="..\libSDL2_ttf-2.0.0.dylib">
+      <IsCxx>False</IsCxx>
+      <Kind>Dynamic</Kind>
+    </NativeReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Larabie-BlueHighway.ttf" />
   </ItemGroup>
 </Project>
