Used #IFs to enable Program.fs to be compiled both with and without MonoMac

--- a/SuperHexagon/SuperHexagon-Linux.fsproj
+++ b/SuperHexagon/SuperHexagon-Linux.fsproj
@@ -41,7 +41,7 @@
     <Compile Include="Game.fs" />
     <Compile Include="SuperHexagon.fs" />
     <Compile Include="GameRenderer.fs" />
-    <Compile Include="Program-Linux.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
@@ -49,10 +49,5 @@
       <Project>{85480198-8711-4355-830E-72FD794AD3F6}</Project>
       <Name>SDL2-CS</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Larabie-BlueHighway.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 </Project>
