--- a/SuperHexagon/SuperHexagon-MonoMac.fsproj
+++ b/SuperHexagon/SuperHexagon-MonoMac.fsproj
@@ -80,6 +80,9 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
     <Compile Include="HelperFunctions.fs" />
+    <Compile Include="IGameScreen.fs" />
+    <Compile Include="Transition.fs" />
+    <Compile Include="Obstacles.fs" />
     <Compile Include="Game.fs" />
     <Compile Include="SuperHexagon.fs" />
     <Compile Include="GameRenderer.fs" />
