Updated Linux project file

--- a/SuperHexagon/SuperHexagon-Linux.fsproj
+++ b/SuperHexagon/SuperHexagon-Linux.fsproj
@@ -38,6 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelperFunctions.fs" />
+    <Compile Include="IGameScreen.fs" />
+    <Compile Include="Transition.fs" />
+    <Compile Include="Obstacles.fs" />
     <Compile Include="Game.fs" />
     <Compile Include="SuperHexagon.fs" />
     <Compile Include="GameRenderer.fs" />
